# alexandria

./: .clang-format  CMakeLists.txt  README.md
automatic_differentiation/: CMakeLists.txt  README.md  ad.cc  ad.h  ad_binary.cc  ad_binary.h  ad_binary_tensor.h  ad_const.h  ad_const_tensor.h  ad_expression.cc  ad_expression.h  ad_expression_tensor.h  ad_param.h  ad_param_tensor.h  ad_tensor.h  ad_tensor_wrap.h  ad_unary.cc  ad_unary.h  ad_unary_tensor.h  ad_var.h  ad_var_tensor.h
automatic_differentiation/test/: ad_tensor_test.cc  ad_test.cc
examples/data/mnist/: mnist_read_raw.cc
integration/: quadrature.h
integration/test/: quadrature_test.cc
neural_net/tensor/: CMakeLists.txt  accesser.cc  accesser.h  address_iterator.cc  address_iterator.h  helpers.cc  helpers.h  shape.cc  shape.h  tensor.h  tensor_base.h  tensor_dense.h  tensor_sparse.h
neural_net/tensor/test/: accesser_test.cc  helpers_test.cc  shape_test.cc  sparse_tensor_test.cc  tensor_test.cc
notes/nade/: NADE.lyx
numerical_recipes/integration/: CMakeLists.txt  quadrature.h
numerical_recipes/integration/test/: quadrature_test.cc
tensor/: CMakeLists.txt  accesser.cc  accesser.h  address_iterator.cc  address_iterator.h  addresser.cc  addresser.h  helpers.cc  helpers.h  shape.cc  shape.h  sparse_tensor.h  tensor.h  tensor_base.h  tensor_const.h  tensor_const_diagonal.h  tensor_dense.h  tensor_eye.h  tensor_sparse.h  tensor_wrap.h  tensor_zero.h
tensor/test/: accesser_test.cc  addresser_test.cc  helpers_test.cc  shape_test.cc  sparse_tensor_test.cc  tensor_test.cc
util/: CMakeLists.txt  archive_in.cc  archive_in.h  archive_out.cc  archive_out.h  clonable.h  function_cache.h  rng.cc  rng.h  serializable.h  singleton.h  util.h
util/test/: archive_test.cc  function_cache_test.cc  gather_scatter_test.cc  rng_test.cc  serializable_test.cc
