cmake_minimum_required(VERSION 2.6 FATAL_ERROR)
project(integration)

if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "Clang")
    message(STATUS "Using clang complier")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Weverything")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-c++98-compat")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-c++98-compat-pedantic")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-padded")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-weak-vtables")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-global-constructors")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wno-exit-time-destructors")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wmissing-variable-declarations")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++14")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pedantic")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
    message(STATUS "Cxx flags ${CMAKE_CXX_FLAGS}")
endif()

if("${CMAKE_CXX_COMPILER_ID}" STREQUAL "GNU")
    message(STATUS "Using g++ complier")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -std=c++11")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -pedantic")
    set(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -O3")
    message(STATUS "Cxx flags ${CMAKE_CXX_FLAGS}")
endif()

find_package(Glog)
if(NOT GLOG_FOUND)
    message(STATUS "glog not found")
endif()

find_package(Gflags)
if(NOT GFLAGS_FOUND)
    message(STATUS "gflags not found")
endif()

find_package(GTest)
if(NOT GTEST_FOUND)
    message(STATUS "gtest not found")
endif()

find_package(X11)
if(NOT X11_FOUND)
    message(STATUS "x11 not found")
endif()

include_directories(${GLOG_INCLUDE_DIRS} ${GTEST_INCLUDE_DIRS} ${X11_INCLUDE_DIR} "../../")

add_executable(quadrature_test test/quadrature_test.cc)
target_link_libraries(quadrature_test ${GLOG_LIBRARIES})
target_link_libraries(quadrature_test ${GTEST_LIBRARIES})
target_link_libraries(quadrature_test ${GTEST_MAIN_LIBRARIES})

enable_testing()
add_test(quadrature quadrature_test)
